--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,6 @@ repo: uptime # The name of this repository
 sites:
   - name: sahachai.net
     url: https://www.sahachai.net
-  - name: dev-t.dtgo
-    url: https://dev-t.dtgo.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -19,7 +17,7 @@ status-website:
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
-      href: /
+      href: /uptime
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
