--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: uptime # The name of this repository
 sites:
   - name: sahachai.net
     url: https://www.sahachai.net
+  - name: minecraft server (6365, 6366)
+    url: http://sahachai.thddns.net:6366
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
